--- a/css/site.css
+++ b/css/site.css
@@ -72,3 +72,11 @@ main>.container {
 .logoFont {
     font-family: 'Racing Sans One', cursive;
 }
+
+.even{
+    font-weight: bold;
+}
+
+.odd{
+    font-weight: 100;
+}
